# agent-skills-rs

./: AGENTS.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  USAGE.md
.agents/: .skill-lock.json
.agents/skills/agent-skills-rs/: SKILL.md
.claude/skills/: agent-skills-rust
.github/workflows/: ci.yml
.serena/: project.yml
openspec/changes/add-multi-file-embedded-skills/: proposal.md  tasks.md
openspec/changes/add-rust-skill-installer/: design.md  proposal.md  tasks.md
openspec/changes/add-rust-skill-installer/specs/cli-introspection/: spec.md
openspec/changes/add-rust-skill-installer/specs/skill-installer/: spec.md
openspec/changes/archive/2026-02-08-add-rust-skill-installer/: design.md
openspec/changes/archive/2026-02-08-fix-symlink-installation/: proposal.md  tasks.md
openspec/changes/archive/2026-02-08-migrate-legacy-skill-lock/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-support-comma-separated-agent/: proposal.md  tasks.md
openspec/changes/archive/2026-02-08-update-spec/: SUMMARY.md  design.md  proposal.md  tasks.md
openspec/changes/archive/add-multi-file-embedded-skills/: tasks.md
openspec/changes/fix-symlink-installation/: proposal.md  tasks.md
openspec/changes/fix-symlink-installation/specs/skill-installer/: spec.md
openspec/changes/support-comma-separated-agent/: design.md  proposal.md  tasks.md
openspec/specs/cli-introspection/: spec.md
openspec/specs/skill-installer/: spec.md
skills/: SKILL.md
skills/agent-skills-rust/: SKILL.md
src/: cli.rs  discovery.rs  embedded.rs  installer.rs  lib.rs  lock.rs  providers.rs  types.rs
(+8 files in other folders)
