[package]
name = "skill_installer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my-command"
path = "src/bin/my_command.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
